<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:orientation="vertical"
    tools:context=".AddTransanctionActivity">
    <RelativeLayout
        android:id="@+id/custom_toolbar_add_transanction"
        android:layout_width="match_parent"
        android:background="@color/red"
        android:layout_height="?actionBarSize">
        <TextView
            android:layout_centerVertical="true"
            android:text="@string/addtransanction"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/user_amount_add"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="10dp"
        android:inputType="number"
        android:hint="@string/amount"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_bg"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/user_note_add"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="10dp"
        android:inputType="text"
        android:hint="@string/note"
        android:textAlignment="textStart"
        android:gravity="start"

        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_bg"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
    <LinearLayout
        android:layout_marginRight="18dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:weightSum="2"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/expense_check_box"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/expense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/income_checkbox"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <Button
        android:id="@+id/btn_add_transanction"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>